--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -143,6 +143,7 @@ footer {
 	justify-content: center;
 }
 .post {
+	min-width: $breakpoint-mobile;
 	padding: 0.5rem;
 	margin: 0.5rem 0;
 	background-color: #fff;
