--- a/static/css/main.css
+++ b/static/css/main.css
@@ -508,13 +508,18 @@ nav ul li a:hover {
   display: grid;
   order: 2;
   grid-template-rows: repeat(auto-fit, minmax(4rem, 1fr));
-  box-shadow: inset 0 2px 0 #0085ef;
-  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  background: dodgerblue;
+  border-radius: 3px;
+  padding: 8px 20px;
+  color: white;
+  transition: background 0.3s ease;
+  text-decoration: none;
 }
 
 .music a:hover {
-  color: #ffffff;
-  box-shadow: inset 0 60px 0 #0085ef;
+  background: #efefef;
+  color: #1f2227;
+  transition: background 0.3s ease;
 }
 
 .music img {
