--- a/static/css/main.css
+++ b/static/css/main.css
@@ -512,14 +512,14 @@ nav ul li a:hover {
   border-radius: 3px;
   padding: 8px 20px;
   color: white;
-  transition: background 0.3s ease;
+  transition: background 0.3s ease !important;
   text-decoration: none;
 }
 
 .music a:hover {
   background: #efefef;
   color: #1f2227;
-  transition: background 0.3s ease;
+  transition: background 0.3s ease !important;
 }
 
 .music img {
