--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -460,12 +460,12 @@ nav {
 		border-radius: 3px;
 		padding: 8px 20px;
 		color: white;
-		transition: background 0.3s ease;
+		transition: background 0.3s ease !important;
 		text-decoration: none;
 		&:hover {
 			background: $bg-light;
 			color: $link;
-			transition: background 0.3s ease;
+			transition: background 0.3s ease !important;
 		}
 	}
 	img { 
