--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -465,13 +465,13 @@ nav {
 	.rss-item { 
 		display: grid;
 		a {
-			display: grid;
 			order: 2;
 			grid-template-rows: repeat(auto-fit, minmax(4rem, 1fr));
 			background: $link-hover;
 			border-radius: 3px;
 			padding: 8px 20px;
 			color: white;
+			box-shadow: none;
 			transition: background 0.3s ease !important;
 			text-decoration: none;
 			&:hover {
