--- a/static/css/main.css
+++ b/static/css/main.css
@@ -508,6 +508,8 @@ nav ul li a:hover {
 }
 
 .music img {
+  width: 100%;
+  height: auto;
   padding-top: 0;
   padding-bottom: 4px;
   order: 1;
@@ -515,15 +517,14 @@ nav ul li a:hover {
 
 .music .rss-item {
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(4rem, 1fr));
 }
 
 .music .rss-item a {
   order: 2;
-  background: #efefef;
+  grid-template-rows: repeat(auto-fit, minmax(4rem, 1fr));
   border-radius: 3px;
   padding: 4px 10px;
-  color: white;
+  color: #1f2227;
   transition: background 0.3s ease !important;
   box-shadow: none !important;
   text-decoration: none;
