Minimize that CSS

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,7 @@
       <link rel="shortcut icon" href="https://micro.blog/{{ .Site.Author.username }}/favicon.png" type="image/x-icon" />
   
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ "css/main.css" | relURL }}">
+    <link rel="stylesheet" type="text/css" href="{{ "css/main.min.css" | relURL }}">
     <link rel="stylesheet" type="text/css" href="{{ "custom.css" | relURL }}">
 
     <!-- Google Fonts -->
