--- a/static/css/main.css
+++ b/static/css/main.css
@@ -146,6 +146,31 @@ footer #rss a:hover {
   margin-bottom: 0;
 }
 
+.profile .mb-username {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  text-align: center;
+}
+
+@media screen and (max-width: 560px) {
+  .profile .mb-username {
+    text-align: left;
+  }
+}
+
+.profile .mb-username a {
+  text-decoration: none;
+  color: dodgerblue;
+}
+
+.profile .mb-username a:hover {
+  color: #1f2227;
+}
+
+.profile .mb-about {
+  line-height: 1.5rem;
+}
+
 /* Post Styles ------- */
 #post-meta {
   display: grid;
@@ -171,7 +196,6 @@ footer #rss a:hover {
 }
 
 .post p {
-  font-family: Georgia, serif;
   line-height: 1.5rem;
 }
 
