--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -521,3 +521,11 @@ img.bookshelf-book-cover {
 	max-width: 150px;
 	min-width:  150px;
   }
+
+/* Photos Grid ------- */
+.photos-grid {
+	max-width: $breakpoint-desktop;
+	img {
+		border-radius: 5px;
+	}
+}
