--- a/static/css/main.css
+++ b/static/css/main.css
@@ -584,7 +584,7 @@ input#input_search.field {
 }
 
 /* Bookshelf ------- */
-img.bookshelf-book-cover {
+.bookshelf-book-cover img {
   max-width: 150px;
   min-width: 150px;
 }
