--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -203,6 +203,14 @@ footer {
 }
 
 /* Replies/Comments ------- */
+.microblog_conversation {
+	max-width: 1200px;
+	
+	img {
+	height: 100%;
+	width: auto;
+	}
+}
 .comment-header {
 	border-top: 1px solid #eee;
 }
