Tame large images in replies

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -228,8 +228,11 @@ footer #rss a:hover {
 }
 
 .microblog_conversation img {
-  height: 100%;
-  width: auto;
+  display: flex;
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.3rem;
+  margin: 1rem 0;
 }
 
 .comment-header {
