--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -213,6 +213,11 @@ footer {
 		border-radius: 0.3rem;
 		margin: 1rem 0;
 	}
+	.microblog_avatar {
+		width: 20px;
+		aspect-ratio: 20 / 20;
+		height: 20px;
+	}
 }
 .comment-header {
 	border-top: 1px solid #eee;
