--- a/static/css/main.css
+++ b/static/css/main.css
@@ -223,24 +223,6 @@ footer #rss a:hover {
 }
 
 /* Replies/Comments ------- */
-.microblog_conversation {
-  max-width: 1200px;
-}
-
-.microblog_conversation img {
-  display: flex;
-  max-width: 100%;
-  height: auto;
-  border-radius: 0.3rem;
-  margin: 1rem 0;
-}
-
-.microblog_conversation .microblog_avatar {
-  width: 20px;
-  aspect-ratio: 20 / 20;
-  height: 20px;
-}
-
 .comment-header {
   border-top: 1px solid #eee;
 }
@@ -255,6 +237,18 @@ footer #rss a:hover {
   margin: 0 10px 20px 10px;
   background: #f0f0f0;
   border-radius: 10px;
+}
+
+.microblog_text {
+  max-width: 1200px;
+}
+
+.microblog_text img {
+  display: flex;
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.3rem;
+  margin: 1rem 0;
 }
 
 .microblog_time {
