--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -203,22 +203,6 @@ footer {
 }
 
 /* Replies/Comments ------- */
-.microblog_conversation {
-	max-width: 1200px;
-	
-	img {
-		display: flex;
-		max-width: 100%;
-		height: auto;
-		border-radius: 0.3rem;
-		margin: 1rem 0;
-	}
-	.microblog_avatar {
-		width: 20px;
-		aspect-ratio: 20 / 20;
-		height: 20px;
-	}
-}
 .comment-header {
 	border-top: 1px solid #eee;
 }
@@ -231,6 +215,16 @@ footer {
 	margin: 0 10px 20px 10px;
 	background: #f0f0f0;
 	border-radius: 10px;
+}
+.microblog_text {
+	max-width: 1200px;
+	img {
+		display: flex;
+		max-width: 100%;
+		height: auto;
+		border-radius: 0.3rem;
+		margin: 1rem 0;
+	}
 }
 .microblog_time {
 	font-size: 0.7em;
