--- a/static/css/main.css
+++ b/static/css/main.css
@@ -233,18 +233,14 @@ footer #rss a:hover {
 }
 
 .microblog_post {
+  max-width: 760px;
   padding: 20px;
   margin: 0 10px 20px 10px;
   background: #f0f0f0;
   border-radius: 10px;
 }
 
-.microblog_text {
-  max-width: 1200px;
-}
-
-.microblog_text img {
-  display: flex;
+.microblog_text, img {
   max-width: 100%;
   height: auto;
   border-radius: 0.3rem;
