--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -211,21 +211,18 @@ footer {
 	font-weight: bold;
 }
 .microblog_post {
+	max-width: $breakpoint-tablet;
 	padding: 20px;
 	margin: 0 10px 20px 10px;
 	background: #f0f0f0;
 	border-radius: 10px;
 }
-.microblog_text {
-	max-width: 1200px;
-	img {
-		display: flex;
+.microblog_text, img {
 		max-width: 100%;
 		height: auto;
 		border-radius: 0.3rem;
 		margin: 1rem 0;
 	}
-}
 .microblog_time {
 	font-size: 0.7em;
 	padding-top: 10px;
