--- a/static/css/main.css
+++ b/static/css/main.css
@@ -235,15 +235,14 @@ footer #rss a:hover {
 .microblog_post {
   max-width: 760px;
   padding: 20px;
-  margin: 0 10px 20px 10px;
-  background: #f0f0f0;
-  border-radius: 10px;
+  margin: 1em 0;
+  background: #efefef;
+  border-radius: 0.5rem;
 }
 
 .microblog_text, img {
   max-width: 100%;
   height: auto;
-  border-radius: 0.3rem;
   margin: 1rem 0;
 }
 
