--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -213,14 +213,13 @@ footer {
 .microblog_post {
 	max-width: $breakpoint-tablet;
 	padding: 20px;
-	margin: 0 10px 20px 10px;
-	background: #f0f0f0;
-	border-radius: 10px;
+	margin: 1em 0;
+	background: $bg-light;
+	border-radius: 0.5rem;
 }
 .microblog_text, img {
 		max-width: 100%;
 		height: auto;
-		border-radius: 0.3rem;
 		margin: 1rem 0;
 	}
 .microblog_time {
