--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,8 +29,8 @@ blockquote:before {
   font-family: Georgia, serif;
   font-weight: bold;
   font-size: 4em;
-  line-height: 0.1rem;
-  margin-right: 0.25rem;
+  line-height: 0.1em;
+  margin-right: 0.25em;
   vertical-align: -0.5em;
 }
 
@@ -43,11 +43,11 @@ hr {
 header {
   background: #efefef;
   border-bottom: 6px solid dodgerblue;
-  padding: 2rem;
+  padding: 2em;
 }
 
 main {
-  padding: 2rem 1rem;
+  padding: 2em 1em;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -55,7 +55,7 @@ main {
 
 .article-wrapper {
   display: grid;
-  padding: 2rem 1rem;
+  padding: 2em 1em;
   justify-content: center;
 }
 
@@ -72,16 +72,16 @@ footer {
 }
 
 footer img {
-  max-height: 3.5rem;
+  max-height: 3.5em;
   width: auto;
   border-radius: 100px;
-  margin: 0.5rem;
+  margin: 0.5em;
 }
 
 footer p {
-  font-size: 0.8rem;
+  font-size: 0.8em;
   font-weight: 600;
-  padding: 0.5rem;
+  padding: 0.5em;
 }
 
 footer p a {
@@ -107,7 +107,7 @@ footer #rss a:hover {
 .columns {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  gap: 1rem;
+  gap: 1em;
 }
 
 @media screen and (max-width: 560px) {
@@ -126,7 +126,7 @@ footer #rss a:hover {
 @media screen and (max-width: 560px) {
   .profile {
     flex-flow: row;
-    gap: 0 1rem;
+    gap: 0 1em;
   }
 }
 
@@ -168,7 +168,7 @@ footer #rss a:hover {
 }
 
 .profile .mb-about {
-  line-height: 1.5rem;
+  line-height: 1.5em;
 }
 
 /* Post Styles ------- */
@@ -178,11 +178,11 @@ footer #rss a:hover {
 }
 
 .post {
-  padding: 0.5rem;
-  margin: 0.5rem 0;
+  padding: 0.5em;
+  margin: 0.5em 0;
   background-color: #fff;
   border: 1px solid #efefef;
-  border-radius: 0.5rem;
+  border-radius: 0.5em;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
 }
 
@@ -190,13 +190,13 @@ footer #rss a:hover {
   display: flex;
   max-width: 100%;
   height: auto;
-  border-radius: 0.3rem;
+  border-radius: 0.3em;
   margin-left: auto;
   margin-right: auto;
 }
 
 .post p {
-  line-height: 1.5rem;
+  line-height: 1.5em;
 }
 
 .post a {
@@ -234,16 +234,15 @@ footer #rss a:hover {
 
 .microblog_post {
   max-width: 760px;
-  padding: 20px;
-  margin: 1em 0;
+  padding: 0.5em;
+  margin: 0.5em 0;
   background: #efefef;
-  border-radius: 0.5rem;
+  border-radius: 0.5em;
 }
 
 .microblog_text, img {
   max-width: 100%;
   height: auto;
-  margin: 1rem 0;
 }
 
 .microblog_time {
@@ -352,7 +351,7 @@ footer #rss a:hover {
   display: flex;
   flex-flow: row wrap;
   gap: 10px;
-  margin: 1rem;
+  margin: 1em;
 }
 
 .archive_categories p {
@@ -402,7 +401,7 @@ nav .logo:hover {
 
 @media screen and (max-width: 560px) {
   nav .logo {
-    line-height: 0.5rem;
+    line-height: 0.5em;
   }
 }
 
@@ -547,7 +546,7 @@ nav ul li a:hover {
 
 .music a {
   order: 2;
-  grid-template-rows: repeat(auto-fit, minmax(4rem, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(4em, 1fr));
   border-radius: 3px;
   padding: 4px 10px;
   color: #1f2227;
@@ -565,8 +564,8 @@ nav ul li a:hover {
 
 .music .rss-box-music ul {
   display: grid;
-  gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
+  gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(11em, 1fr));
   padding-left: 0 !important;
   text-align: center;
 }
