--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -36,8 +36,8 @@ blockquote {
 		font-family: Georgia, serif;
 		font-weight: bold;
 		font-size: 4em;
-		line-height: 0.1rem;
-		margin-right: 0.25rem;
+		line-height: 0.1em;
+		margin-right: 0.25em;
 		vertical-align: -0.5em;
 	}
 }
@@ -50,18 +50,18 @@ hr {
 header {
 	background: $bg-light;
 	border-bottom: 6px solid $link-hover;
-	padding: 2rem;
+	padding: 2em;
 }
 
 main {
-	padding: 2rem 1rem;
+	padding: 2em 1em;
 	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 }
 .article-wrapper {
 	display: grid;
-	padding: 2rem 1rem;
+	padding: 2em 1em;
 	justify-content: center;
 }
 article {
@@ -76,15 +76,15 @@ footer {
 	padding: 0 20px;
 
 	img {
-		max-height: 3.5rem;
+		max-height: 3.5em;
 		width: auto;
 		border-radius: 100px;
-		margin: 0.5rem;
+		margin: 0.5em;
 	}
 	p {
-		font-size: 0.8rem;
+		font-size: 0.8em;
 		font-weight: 600;
-		padding: 0.5rem;
+		padding: 0.5em;
 		a {
 			color: $link-hover;
 			text-decoration: none;
@@ -109,7 +109,7 @@ footer {
 .columns {
 	display: grid;
 	grid-template-columns: 1fr 2fr 1fr;
-	gap: 1rem;
+	gap: 1em;
 	@media screen and (max-width: $breakpoint-mobile) {
 		grid-template-columns: 1fr;
 	}
@@ -122,7 +122,7 @@ footer {
 	align-items: center;
 	@media screen and (max-width: $breakpoint-mobile) {
 		flex-flow: row;
-		gap: 0 1rem;
+		gap: 0 1em;
 	}
 	img {
 		max-width: 100%;
@@ -151,7 +151,7 @@ footer {
 		}
 	}
 	.mb-about {
-		line-height: 1.5rem;
+		line-height: 1.5em;
 	}
 }
 
@@ -161,11 +161,11 @@ footer {
 	justify-content: center;
 }
 .post {
-	padding: 0.5rem;
-	margin: 0.5rem 0;
+	padding: 0.5em;
+	margin: 0.5em 0;
 	background-color: #fff;
 	border: 1px solid $bg-light;
-	border-radius: 0.5rem;
+	border-radius: 0.5em;
 	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04),
 		0px 0px 1px rgba(0, 0, 0, 0.04);
 
@@ -173,13 +173,13 @@ footer {
 		display: flex;
 		max-width: 100%;
 		height: auto;
-		border-radius: 0.3rem;
+		border-radius: 0.3em;
 		margin-left: auto;
 		margin-right: auto;
 	}
 	p {
 		//font-family: Georgia, serif;
-		line-height: 1.5rem;
+		line-height: 1.5em;
 	}
 	a {
 		color: $link-hover;
@@ -212,15 +212,14 @@ footer {
 }
 .microblog_post {
 	max-width: $breakpoint-tablet;
-	padding: 20px;
-	margin: 1em 0;
+	padding: 0.5em;
+	margin: 0.5em 0;
 	background: $bg-light;
-	border-radius: 0.5rem;
+	border-radius: 0.5em;
 }
 .microblog_text, img {
 		max-width: 100%;
 		height: auto;
-		margin: 1rem 0;
 	}
 .microblog_time {
 	font-size: 0.7em;
@@ -313,7 +312,7 @@ footer {
     display: flex;
     flex-flow: row wrap;
     gap: 10px;
-    margin: 1rem;
+    margin: 1em;
 
 	p {
 		margin: 0;
@@ -355,7 +354,7 @@ nav {
 			color: $link;
 		}
 		@media screen and (max-width: $breakpoint-mobile) {
-			line-height: 0.5rem;
+			line-height: 0.5em;
 		}
 	}
 	ul {
@@ -483,7 +482,7 @@ nav {
 	}
 	a {
 		order: 2;
-		grid-template-rows: repeat(auto-fit, minmax(4rem, 1fr));
+		grid-template-rows: repeat(auto-fit, minmax(4em, 1fr));
 		border-radius: 3px;
 		padding: 4px 10px;
 		color: $link;
@@ -499,8 +498,8 @@ nav {
 	}
 	.rss-box-music ul {
 		display: grid;
-		gap: 1rem;
-		grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
+		gap: 1em;
+		grid-template-columns: repeat(auto-fit, minmax(11em, 1fr));
 		padding-left: 0 !important;
 		text-align: center;
 
