Change units to em

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -240,7 +240,11 @@ footer #rss a:hover {
   border-radius: 0.5em;
 }
 
-.microblog_text, img {
+.microblog_text p {
+  margin: 0 0 10px;
+}
+
+.microblog_text img {
   max-width: 100%;
   height: auto;
 }
