--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -218,10 +218,10 @@ footer {
 	border-radius: 0.5em;
 }
 .microblog_text { 
-	p { margin: 0 0 10px; }
 	img {
 		max-width: 100%;
 		height: auto;
+		margin: 0.5em 0;
 	}
 }
 .microblog_time {
