--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -1,12 +1,8 @@
 $breakpoint-mobile: 560px;
 $breakpoint-tablet: 760px;
 $breakpoint-desktop: 12000px;
-$bg-dark: #1f2227;
-$bg-light: #efefef;
-$link: #1f2227;
-$link-hover: dodgerblue;
-$rss: chocolate;
-$rss-hover: orange;
+
+@import 'partials/_colors.scss';
 
 
 /* Global Styles ------- */
@@ -14,6 +10,11 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: -apple-system, "Helvetica Neue", Roboto, sans-serif;
+
+	@media (prefers-color-scheme: dark) {
+		background-color: $winter-night-lt;
+		color: $winter-day-lt;
+	}
 }
 
 h1,
@@ -26,12 +27,12 @@ h6 {
 	font-weight: 800;
 }
 blockquote {
-    background-color: $bg-light;
-    border-left: 10px solid $link-hover;
+    background-color: $winter-day-md;
+    border-left: 10px solid $frost-ocean;
     padding: 0.5em 10px;
     quotes: "\201C""\201D""\2018""\2019";
 	&:before {
-		color: var(--link-hover);
+		color: $frost-water;
 		content: "\201C";
 		font-family: Georgia, serif;
 		font-weight: bold;
@@ -40,17 +41,31 @@ blockquote {
 		margin-right: 0.25em;
 		vertical-align: -0.5em;
 	}
+	@media (prefers-color-scheme: dark) {
+		color: $winter-night-dk;
+		border-left: 10px solid $frost-green;
+		&:before {
+			color: $frost-ice;
+		}
+	}
 }
 hr {
     border: 0;
     height: 1px;
-    background-color: $bg-light;
+    background-color: $winter-day-dk;
+	@media (prefers-color-scheme: dark) {
+		background-color: $winter-night-dk;
+	}
 }
 
 header {
-	background: $bg-light;
+	background: $winter-day-md;
 	border-bottom: 6px solid $link-hover;
 	padding: 2em;
+
+	@media (prefers-color-scheme: dark) {
+		background-color: $winter-night-dk;
+	}
 }
 
 main {
@@ -71,9 +86,13 @@ article {
 footer {
 	display: flex;
 	justify-content: center;
-	background: $bg-light;
+	background: $winter-day-md;
 	border-top: 3px solid $link-hover;
 	padding: 0 20px;
+
+	@media (prefers-color-scheme: dark) {
+		background-color: $winter-night-dk;
+	}
 
 	img {
 		max-height: 3.5em;
@@ -145,8 +164,14 @@ footer {
 		a {
 			text-decoration: none;
 			color: $link-hover;
+			@media (prefers-color-scheme: dark) {
+				color: $frost-ice;
+			}
 			&:hover {
 				color: $link;
+				@media (prefers-color-scheme: dark) {
+					color: $frost-water;
+				}
 			}
 		}
 	}
@@ -164,10 +189,16 @@ footer {
 	padding: 0.5em;
 	margin: 0.5em 0;
 	background-color: #fff;
-	border: 1px solid $bg-light;
+	border: 1px solid $winter-day-lt;
 	border-radius: 0.5em;
 	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04),
 		0px 0px 1px rgba(0, 0, 0, 0.04);
+
+	@media (prefers-color-scheme: dark) {
+		background-color: $winter-night-md;
+		color: $winter-day-lt;
+		border: 1px solid $winter-night-dk;
+	}
 
 	img {
 		display: flex;
@@ -178,7 +209,6 @@ footer {
 		margin-right: auto;
 	}
 	p {
-		//font-family: Georgia, serif;
 		line-height: 1.5em;
 	}
 	a {
@@ -214,8 +244,16 @@ footer {
 	max-width: $breakpoint-tablet;
 	padding: 0.5em;
 	margin: 0.5em 0;
-	background: $bg-light;
+	background: $winter-day-lt;
 	border-radius: 0.5em;
+	@media (prefers-color-scheme: dark) {
+		background-color: $winter-night-md;
+		color: $winter-day-lt;
+	}
+
+	a {
+		color: dodgerblue;
+	}
 }
 .microblog_text { 
 	img {
@@ -243,7 +281,7 @@ footer {
 	}
 	a {
 		display: flex;
-		background: $bg-light;
+		background: $winter-day-lt;
 		border-radius: 3px;
 		padding: 4px 10px;
 		color: $link;
@@ -267,14 +305,21 @@ footer {
 	h3 {
 		width: 100%;
 		color: #999;
+		@media (prefers-color-scheme: dark) {
+			color: $winter-day-md;
+		}
 	}
 	a {
-		background: $bg-light;
+		background: $winter-day-lt;
 		border-radius: 3px;
 		padding: 8px 20px;
 		color: $link;
 		transition: background 0.3s ease;
 		text-decoration: none;
+		@media (prefers-color-scheme: dark) {
+			background-color: $winter-night-dk;
+			color: $winter-day-lt;
+		}
 		&:hover {
 			background: $link-hover;
 			color: white;
@@ -293,7 +338,7 @@ footer {
 		&:hover { color: $link; }
 	}
 	.archive-date {
-		background: $bg-light;
+		background: $winter-day-lt;
 		border-radius: 3px;
 		padding: 4px;
 		color: $link;
@@ -329,7 +374,7 @@ footer {
 		transition: background 0.3s ease;
 		text-decoration: none;
 		&:hover {
-			background: $bg-light;
+			background: $winter-day-lt;
 			color: $link;
 			transition: background 0.3s ease;
 		}
@@ -375,6 +420,9 @@ nav {
 				text-decoration: none;
 				letter-spacing: 0.04em;
 				transition: all 0.3s ease;
+				@media (prefers-color-scheme: dark) {
+					color: $frost-ice;
+				}
 				&:hover {
 					color: $link-hover;
 					text-decoration: none;
@@ -392,7 +440,7 @@ nav {
 		height: 100%;
 		width: 100%;
 		z-index: -1;
-		background: $bg-dark;
+		background: $winter-night-dk;
 		opacity: 0;
 		transition: all 0.3s ease;
 	}
@@ -422,14 +470,20 @@ nav {
 		cursor: pointer;
 		z-index: 9999;
 		border-radius: 50%;
-		background: $bg-light;
+		background-color: $winter-day-md;
+		@media (prefers-color-scheme: dark) {
+			background-color: $winter-night-dk;
+		}
 		i {
 			display: block;
 			width: 20px;
 			height: 2px;
-			background: $bg-dark;
+			background: $winter-night-dk;
 			border-radius: 2px;
 			margin-left: 14px;
+			@media (prefers-color-scheme: dark) {
+				background: $winter-day-lt;
+			}
 			&:nth-child(1) {
 				margin-top: 16px;
 			}
@@ -444,7 +498,7 @@ nav {
 	}
 }
 #nav:checked + .nav-open {
-	background: $bg-dark;
+	background: $winter-night-dk;
 	transform: rotate(45deg);
 	i {
 		background: #fff;
