--- a/static/css/main.css
+++ b/static/css/main.css
@@ -307,6 +307,18 @@ footer #rss a:hover {
 
 .microblog_post a {
   color: dodgerblue;
+  text-decoration: none;
+  padding: 1px 2px;
+  border-radius: 3px;
+  box-shadow: inset 0 0px 0 dodgerblue;
+  transition: box-shadow 0.3s ease;
+}
+
+.microblog_post a:hover {
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: inset 0 -45px 0 dodgerblue;
+  transition: box-shadow 0.3s ease;
 }
 
 .microblog_text img {
