--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -252,7 +252,18 @@ footer {
 	}
 
 	a {
-		color: dodgerblue;
+		color: $link-hover;
+		text-decoration: none;
+		padding: 1px 2px;
+		border-radius: 3px;
+		box-shadow: inset 0 0px 0 $link-hover;
+		transition: box-shadow 0.3s ease;
+		&:hover {
+			color: #fff;
+			border-radius: 3px;
+			box-shadow: inset 0 -45px 0 $link-hover;
+			transition: box-shadow 0.3s ease;
+		}
 	}
 }
 .microblog_text { 
