--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -13,6 +13,7 @@
     </section>
     </article>
     <div class="replies">
+      <h3>Replies</h3>
         {{ if .Site.Params.include_conversation }}
         <script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
         {{ end }}
