--- a/static/css/main.css
+++ b/static/css/main.css
@@ -295,6 +295,7 @@ footer #rss a:hover {
   padding: 0.5em;
   margin: 0.5em 0;
   background: #ECEFF4;
+  color: #2E3440;
   border-radius: 0.5em;
 }
 
