--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,6 +24,18 @@ h5,
 h6 {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
+  color: #2E3440;
+}
+
+@media (prefers-color-scheme: dark) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: #ECEFF4;
+  }
 }
 
 blockquote {
@@ -295,7 +307,6 @@ footer #rss a:hover {
   padding: 0.5em;
   margin: 0.5em 0;
   background: #ECEFF4;
-  color: #2E3440;
   border-radius: 0.5em;
 }
 
