--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -17,6 +17,7 @@
         {{ if .Site.Params.include_conversation }}
         <script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
         {{ end }}
+        {{ partial "conversation-link.html" . }}
      </div>
 </div>
 <!--<section id="post-meta" class="clearfix">
