--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,6 @@
 	<a href="https://micro.blog/{{ .Site.Author.username }}">
 		<img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
 	  </a>
-	<p>Designed by <a href="/about">Me</a><br>Powered by <a href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Micro.blog</a></p>
+	<p>Designed by <a href="/colophon">Me</a><br>Powered by <a href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Micro.blog</a></p>
 	<p id="rss"><a href="/feed.xml">RSS</a> &bull; <a href="/feed.json">JSON</a></p>
 </footer>
